c2prj1_cards/grade.txt
Grading at Wed Jun 10 07:32:48 UTC 2020
Compiling cards.c
cards.c: In function ‘card_from_letters’:
cards.c:94:27: error: ‘KING_VALUE’ undeclared (first use in this function)
   case 'K' : temp.value = KING_VALUE ; break;
                           ^
cards.c:94:27: note: each undeclared identifier is reported only once for each function it appears in
cards.c:95:27: error: ‘ACE_VALUE’ undeclared (first use in this function)
   case 'A' : temp.value = ACE_VALUE ; break;
                           ^
Could not compile your card.c!

Overall Grade: FAILED
